# Funani

./: .gitignore  .gitmodules  Funani.sln  LICENCE.md  LICENSE  LICENSE.md  README.md  checks.sh  venv-setup.txt
.devcontainer/python/: devcontainer.json
.devcontainer/typescript/: devcontainer.json
.github/workflows/: dotnetcore.yml
attic/: README.md
attic/rest/: api.py
attic/test/: hashdeep.py
data/ci/: missing_indexes.sql
data/mime/: README.md  update.sh
doc/: Funani.eap
docker/: .env  README.md  docker-compose.yml
docker/app/: 00-database.sql  01-data.sql  package-lock.json  package.json
docker/cas/: Containerfile  Dockerfile  README.md  pyproject.toml
docker/cas/src/: funani.cfg  funani.py  funaniarg.py  funanidb.py  metadb.py
docker/db/: Dockerfile
docker/graphql/: Dockerfile
docker/web/: 00-database.sql  package-lock.json  package.json  pnpm-lock.yaml
python/: .spyderproject  .spyderworkspace  address.py  funani.cfg  funani.py  funaniarg.py  funanicfg.py  funanidb.py  funanilog.py  funanitests.py  hashdeep.py  import_tree.py  mediadb.py  metadb.py  requirements.txt  test.db  testdb.py
python/core/: funani.cfg.dist  funani.py  funaniarg.py  funanicfg.py  funanidb.py  funanilog.py  mediadb.py  metadb.py
python/rest/: README.md  api.py  import_metadata.py  settings.py
python/test/: comparetree.py
python/web/: app.js  bower.json  package.json  start.sh
server/: manage.py  requirements.txt
server/funani/: settings.py  urls.py  wsgi.py
src/: Funani.sln  Funani.userprefs  GlobalSuppressions.cs  Settings.StyleCop
(+208 files in other folders)
