[project]
name = "cas"
version = "0.1.0"
description = ""
authors = [
    {name = "Jaap de Haan",email = "jaap.dehaan@alpsalpine.com"}
]
requires-python = ">=3.12"
dependencies = [
    "pillow (==11.1.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
