[project]
name = "cas"
version = "0.1.0"
description = ""
authors = [
    {name = "Jaap de Haan",email = "ColorOfCode@googlemail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "pillow (>=11.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
